# oresat-od-database

./: .gitignore  README.md  build_and_install.sh  od.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yaml
docs/: beacon.rst  conf.py  index.rst
docs/scripts/: gen_beacon_rst.py
oresat_configs/: __init__.py  __main__.py  _json_to_od.py  _write_canopennode.py  _yaml_to_od.py  beacon_config.py  card_config.py  card_info.py  cards.csv  constants.py  edl.py  edl.yaml  edl_cmd_defs.py  edl_cmd_defs.yaml  od_dict.py  oresat0.py  oresat0_5.py  standard_objects.json  standard_objects.yaml  write_canopennode.py
oresat_configs/base/: __init__.py  battery.yaml  c3.yaml  cantalk.yaml  cfc.yaml  diode_test.yaml  dtc.yaml  dxwifi.yaml  edl.yaml  fw_common.yaml  gps.yaml  imu.yaml  protocard.yaml  reaction_wheel.yaml  solar.yaml  star_tracker.yaml  sw_common.yaml
oresat_configs/jsons/oresat0/: beacon.json  c3.json  dxwifi.json  gps.json  imu.json  reaction_wheel.json  star_tracker.json  sw_core.json
oresat_configs/jsons/oresat0.5/: battery.json  beacon.json  c3.json  cfc.json  dxwifi.json  fw_core.json  gps.json  solar.json  star_tracker.json
oresat_configs/oresat0/: __init__.py  beacon.yaml
oresat_configs/oresat0/jsons/: c3.json  fw_core.json  sw_core.json
oresat_configs/oresat0_5/: __init__.py  beacon.yaml
oresat_configs/oresat0_5/jsons/: battery.json  c3.json  dxwifi.json  fw_core.json  sw_core.json
oresat_configs/oresat1/: __init__.py  beacon.yaml
oresat_configs/scripts/: cache.py  gen_canopend.py  gen_card_c_code.py  gen_dbc.py  gen_dcf.py  gen_fw_files.py  gen_kaitai.py  gen_xtce.py  list_cards.py  pdo.py  print_od.py  sdo_transfer.py
oresat_od_db/: __init__.py  __main__.py  _json_to_od.py  _yaml_to_od.py  constants.py  standard_objects.json
oresat_od_db/base/: __init__.py  battery.yaml  c3.yaml  gps.yaml
oresat_od_db/base/configs/: battery.yaml  c3.yaml  cfc.yaml  dxwifi.yaml  fw_common.yaml  gps.yaml  imu.yaml  solar.yaml  star_tracker.yaml  sw_common.yaml
oresat_od_db/base/jsons/: battery.json  c3.json  cfc.json  dxwifi.json  fw_common.json  gps.json  imu.json  solar.json  sw_common.json
oresat_od_db/oresat0/: __init__.py
oresat_od_db/oresat0/configs/: battery_overlay.yaml  beacon.yaml  c3_overlay.yaml
oresat_od_db/oresat0/jsons/: battery.json  battery_overlay.json  beacon.json  c3.json  fw_common.json  fw_core.json  gps.json  sw_common.json
oresat_od_db/oresat0_5/: __init__.py
oresat_od_db/oresat0_5/configs/: beacon.yaml  c3_overlay.yaml
oresat_od_db/oresat0_5/jsons/: beacon.json  c3.json  cfc.json  fw_core.json  reaction_wheel.json  sw_common.json  sw_core.json
oresat_od_db/oresat1/: __init__.py
oresat_od_db/scripts/: gen_fw_files.py  print_od.py  sdo_transfer.py
scripts/: gen_canopennode_od.py  gen_card_c_code.py  gen_dcf.py  print_od.py  sdo_transfer.py
tests/: __init__.py  test_config_types.py  test_edl.py  test_oresat0.py  test_oresat0_5.py  test_oresat1.py
