[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-configs"
description = "OreSat configs"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "canopen",
    "dataclasses_json",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "oresat_configs.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*"] 

[tool.setuptools.package-data]
"*" = ["*.json"]
