[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-configs"
description = "OreSat configs"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "canopen",
    "dataclasses_json",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "oresat_configs.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*"] 

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line_length = 99

[tool.pylama]
format = "pylint"
skip = "*/.tox/*,*/.env/*"
linters = "pycodestyle,pyflakes,mccabe,mypy"
ignore = "E402,C901,C0403"
max_line_length = 100

[tool.pylama.linter.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.pylama.files]]
path = "*/__init__.py"
ignore = "F0401"
