[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oresat-od-database"
description = "OreSat object dictionary database"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "canopen",
    "dataclasses_json",
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "oresat_od_db.__version__"}

[tool.setuptools.packages.find]
exclude = ["docs*"] 

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line_length = 99

[tool.pylama]
format = "pylint"
skip = "*/.tox/*,*/.env/,*/.git/*,*/build/*"
# E402:     Module level import not at top of file
# C901:     Function is too complex
# C0403:    Invalid characters in docstring
# C0103:    Arguments are snake_case naming style (also short name)
# E203:     Whitespace before ':' (black does this)
# R0912:    Too many branches
# R0915:    Too many statements
# R0901:    Function is too complex
# R0914:    Too many local variables
# R1716:    Simplify chained comparison between the operands
# C0413:    Imports at top of module
# C0206:    Consider iterating dictionaries with .items()
# R1716:    Simplify chained comparison between the operands
# W1514:    Using open without explicitly specifying an encoding
linters = "pycodestyle,pyflakes,pylint,mccabe,mypy,radon"
ignore = "E402,C901,C0403,C0103,E203,R0912,R0915,R901,R901,R0914,C0413,C0206,R1716,W1514"
max_line_length = 100

[[tool.mypy.overrides]]
module = "canopen"
ignore_missing_imports = true

[[tool.pylama.files]]
path = "*/__init__.py"
ignore = "F0401"  # Unused imports
